[gd_scene load_steps=13 format=3 uid="uid://nr6v23qqk8cq"]

[ext_resource type="Script" path="res://player.gd" id="1_uptun"]
[ext_resource type="ArrayMesh" uid="uid://cee32cluwkn5e" path="res://meshes/kayaks/banana.res" id="3_53yu7"]
[ext_resource type="PackedScene" uid="uid://brl72ky2q062u" path="res://models/character.glb" id="3_w7gwq"]
[ext_resource type="ArrayMesh" uid="uid://dt4xluyt6ckn1" path="res://meshes/kayaks/normal.res" id="4_a7mya"]
[ext_resource type="ArrayMesh" uid="uid://ceocuipu8o2xo" path="res://meshes/kayaks/hotdog.res" id="4_b7jyd"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1oafd"]
friction = 0.5
bounce = 0.4

[sub_resource type="Curve" id="Curve_oqg3q"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.496753, 0.963636), 0.0, 0.0, 0, 0, Vector2(0.795455, 0.863636), -1.62791, -1.62791, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_438mp"]
radius = 0.499303
height = 4.23762

[sub_resource type="BoxShape3D" id="BoxShape3D_4u5f0"]
size = Vector3(1.06633, 1.71325, 3.3791)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ewjn6"]
emission_shape = 3
emission_box_extents = Vector3(0.7, 0, 0.1)
direction = Vector3(0, 0, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.5
initial_velocity_max = 0.5
damping_min = 0.1
damping_max = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6qvhj"]
shading_mode = 0
albedo_color = Color(0.541176, 0.505882, 0.152941, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_f857p"]
material = SubResource("StandardMaterial3D_6qvhj")
size = Vector2(0.1, 2)

[node name="Player" type="RigidBody3D"]
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_1oafd")
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource("1_uptun")
paddle_force = SubResource("Curve_oqg3q")

[node name="Banana" type="MeshInstance3D" parent="."]
visible = false
mesh = ExtResource("3_53yu7")

[node name="Hotdog" type="MeshInstance3D" parent="."]
visible = false
mesh = ExtResource("4_b7jyd")

[node name="Normal" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0895669)
mesh = ExtResource("4_a7mya")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.176264, -0.667382)
shape = SubResource("CapsuleShape3D_438mp")

[node name="LeftPaddle" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.2, 0)
visible = false
radius = 0.1

[node name="RightPaddle" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.2, 0)
visible = false
radius = 0.1

[node name="AudioPaddleRight" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.42407, 0, 0)
bus = &"Kayak"

[node name="AudioPaddleLeft" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.70991, 0, 0)
bus = &"Kayak"

[node name="AudioCollision" type="AudioStreamPlayer3D" parent="."]
bus = &"Kayak"

[node name="character" parent="." instance=ExtResource("3_w7gwq")]

[node name="Weapons" type="Node3D" parent="."]

[node name="Hitbox" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.450964, -0.602506)
shape = SubResource("BoxShape3D_4u5f0")

[node name="GPUParticles3D_Trail" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0659482, 1.38694)
cast_shadow = 0
amount = 100
lifetime = 30.0
process_material = SubResource("ParticleProcessMaterial_ewjn6")
draw_pass_1 = SubResource("PlaneMesh_f857p")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.55263, -1.46322)
light_color = Color(0.85098, 0.8, 0.407843, 1)
light_energy = 10.033
shadow_enabled = true
omni_range = 7.786
omni_attenuation = 1.41421

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.2101, -8.46322)
light_color = Color(0.980392, 0.929412, 0.843137, 1)
light_energy = 1.819
light_volumetric_fog_energy = 0.0
shadow_enabled = true
omni_range = 66.263
omni_attenuation = 0.707107

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.980478, 0.196631, 0, -0.196631, 0.980478, 0, 2.51155, -0.633473)
light_color = Color(0.658824, 0.717647, 0.937255, 1)
light_energy = 3.667
light_volumetric_fog_energy = 16.0
shadow_enabled = true
spot_range = 44.004
spot_angle = 23.19

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
